# comptis_ia

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-08-api-gateway.md
docs/superpowers/specs/: 2026-07-08-api-gateway-design.md  2026-07-09-agent-rapprochement-design.md
src/comptis/application/auth/: exceptions.py  ports.py  use_cases.py
src/comptis/application/rapprochement/: ports.py  use_cases.py
src/comptis/application/tenancy/: ports.py  use_cases.py
src/comptis/domain/rapprochement/: entities.py  value_objects.py
src/comptis/domain/tenancy/: entities.py  exceptions.py  value_objects.py
src/comptis/infrastructure/auth/: api_key.py  jwt.py  password.py
src/comptis/infrastructure/db/: base.py  models.py  reconciliation_patterns.py  repositories.py  tenant_context.py
src/comptis/infrastructure/mcp/: pnicompta_client.py
src/comptis/interface/api/: dependencies.py  main.py
tests/application/auth/: test_use_cases.py
tests/application/rapprochement/: test_use_cases.py
tests/application/tenancy/: conftest.py  test_use_cases.py
tests/domain/rapprochement/: test_entities.py
tests/domain/tenancy/: test_entities.py  test_exceptions.py  test_value_objects.py
tests/infrastructure/agents/rapprochement/: test_graph.py  test_llm_arbiter.py  test_scorer.py
tests/infrastructure/auth/: test_jwt.py  test_password.py
tests/infrastructure/db/rapprochement/: conftest.py  test_pattern_repository.py
tests/interface/api/: conftest.py  test_auth.py  test_rapprochement.py
(+20 files in other folders)
